20000309-13:24 EST Paul Tucker <ptucker@sympatico.ca>
   * source\rtl\gtapi.c
     * Initialize s_iCurrentRow and s_iCurrentCol

20000308-18:05 GMT+1 Victor Szakats <info@szelvesz.hu>
   * makefile.vc
     ! Small correction.
   * make_tpl.*
     bin/bld_tpl.*
     ! "<>" chars around the email address replaced with "()", since it 
       confused some OSes.
   * source/rtl/tget.prg
     ! TOFIX added.

20000308-15:05 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/rtl/gt/gtstd.c
	*replaced s_szCrLf with hb_consoleGetNewLine()

20000308-00:40 GMT+1 Victor Szakats <info@szelvesz.hu>
   * samples/Makefile
     samples/cccppc/* (scheduled for removal, since it's huge)
     samples/guestbk/Makefile
     samples/hscript/Makefile
     samples/misc/Makefile
     samples/pe/Makefile
     samples/guestbk/bld_b32.bat
     samples/hscript/bld_b32.bat
     * Updated. (not tested)
   * samples/Makefile
     - cccppc removed from the list.

20000308-00:14 GMT+1 Victor Szakats <info@szelvesz.hu>
   * include/hbver.h
     * Version bumped to 0.32 2000-03-07
   * config/w32/gcc.cfg
     ! Added user32 to the library list to make OEMANSI.C link.
   * doc/whatsnew.txt
     + Date filled.

20000307-23:26 GMT+1 Victor Szakats <info@szelvesz.hu>
   * makefile.vc
     ! UNISTD.H problem solved with another method, now it doesn't leave
       the temporary UNISTD.H in the INCLUDE dir, so that it will not conflict
       with the GCC make process.

20000307-21:06 GMT+1 Victor Szakats <info@szelvesz.hu>
   * doc/whatsnew.txt
     + Build 31c things added.
   * source/rtl/dir.c
     % Flattened an #ifdef maze.
     * _rtl_chmod() changed to the less specific chmod().
     ! Fixed the other three Borland warnings.
     - Removed unused parts from the code.

20000307-14:20 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
  *utils/hbdoc/genrtf.prg
  source/tools/rtf.prg
      *small changes
  *utils/hbdoc/genng.prg
  *source/tools/ng.prg
    *Added code to display tables
  *source/tools/os2.prg