@@ -1,0 +1,16 @@
+@echo off
+
+   nmake /f makefile.vc %1 %2 %3 > make_vc.log
+   if errorlevel 1 goto BUILD_ERR
+
+:BUILD_OK
+
+   goto EXIT
+
+:BUILD_ERR
+
+   notepad make_vc.log
+   goto EXIT
+
+:EXIT
+
