@@ -1,0 +1,67 @@
+#
+# $Id$
+#
+
+#
+# Directory macros. These should never have to change.
+#
+
+INCLUDE_DIR=..\..\include
+
+#
+# C compiler definition and C flags. These should never have to change.
+#
+
+CC=cl
+CFLAGS=-W1 -nologo -I$(INCLUDE_DIR) -D_Windows -DHARBOUR_USE_WIN_GTAPI
+CLIBFLAGS=$(CFLAGS) -c /TP
+CLIBFLAGSDEBUG=$(CFLAGS) -c -Zi /TP
+
+#
+# Macros to access our library names
+#
+
+ADS_LIB=..\..\lib\vc\rddads.lib
+HARBOUR_EXE=..\..\bin\harbour.exe
+HARBOURFLAGS=-iinclude -n -q0 -w -es2 -gc0
+
+
+#
+# OBJ list for ads.lib
+#
+
+ADS_LIB_OBJS = \
+    ads0.obj \
+    ads1.obj \
+    adsfunc.obj
+
+#
+# Our default target
+#
+
+all: $(ADS_LIB)
+
+#
+# Library dependencies and build rules
+#
+
+$(ADS_LIB) : $(ADS_LIB_OBJS)
+    lib /OUT:$(ADS_LIB) $(ADS_LIB_OBJS)
+
+
+#
+# ADS dependencies
+#
+
+ads0.c : ads0.prg
+    $(HARBOUR_EXE) $** $(HARBOURFLAGS) -o$@
+
+ads0.obj : ads0.c
+    $(CC) $(CLIBFLAGS) -Fo$@ $**
+
+adsfunc.obj : adsfunc.c
+    $(CC) $(CLIBFLAGS) -Fo$@ $**
+
+ads1.obj : ads1.c
+    $(CC) $(CLIBFLAGS) -Fo$@ $**
+
