@@ -1,3 +1,12 @@
+20000311-19:16 GMT+3 Alexander Kresin
+   + contrib/rdd_ads/make_vc.bat
+   + contrib/rdd_ads/makefile.vc
+   * contrib/rdd_ads/ads1.c
+   * contrib/rdd_ads/adsfunc.c
+     Added makefiles for VC
+     Fixed some warnings
+     All the above I've got from Matteo Baccan
+
 20000309-13:24 EST Paul Tucker <ptucker@sympatico.ca>
    * source\rtl\gtapi.c
      * Initialize s_iCurrentRow and s_iCurrentCol
